# auto-invest-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: operations.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  server.mjs
frontend/src/: App.tsx  api.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 20260706_0001_create_initial_schema.py  20260706_0002_create_signals.py  20260706_0003_create_rebalance_plans.py  20260706_0004_create_dry_run_execution.py  20260706_0005_create_sandbox_execution.py  20260706_0006_add_manual_confirmation_statuses.py  20260710_0007_create_automation_runs.py  20260711_0008_create_stream_reconciliation.py
scripts/: generate_initial_migration.ps1
src/app/: __init__.py  main.py
src/app/admin/: __init__.py  errors.py  repository.py  schemas.py  service.py
src/app/api/: admin.py  (+5 more)
tests/: test_config.py  test_health.py
tests/admin/: test_repository.py  test_schemas.py  test_service.py
tests/api/: test_admin.py
tests/automation/: test_cycle.py  test_infrastructure.py
tests/broker/: test_factory.py  test_mock_provider.py  test_tinvest.py
tests/execution/: test_dry_run_service.py  test_execution_planner.py  test_manual_confirmation.py  test_risk.py  test_sandbox_service.py
tests/notifications/: test_telegram.py
tests/portfolio/: test_optimizer.py  test_planner.py  test_rebalance_service.py
tests/signals/: test_engine.py  test_signal_service.py
tests/streams/: test_domain.py  test_tinvest_streams.py
(+66 files in other folders)
