[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-invest-manager"
version = "0.1.0"
description = "Safety-first portfolio recommendation and trading platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "redis>=5.2,<7",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "tinkoff-investments==0.2.0b118",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
